--- a/single-price-grid-component-master/single-price-grid-component-master/style.css
+++ b/single-price-grid-component-master/single-price-grid-component-master/style.css
@@ -92,6 +92,11 @@ button {
     border-radius: 5px;
 }
 
+button:hover {
+    transform: scale(1.03);
+    opacity: .8;
+}
+
 .right {
     background-color: hsla(179, 62%, 43%, .5);
     color: #fff;
